--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.security.user.password=admin123
 
 # Hibernate and JPA Configuration
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
