Added More Backend code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,21 +2,20 @@ spring.application.name=backend
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=Sql@123456
+spring.datasource.password=Abhi
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.security.user.name=admin
 spring.security.user.password=admin123
 
 # Hibernate and JPA Configuration
-
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
 
 server.tomcat.max-http-form-post-size=10MB
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-
