--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=backend
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=Sql@123456
+spring.datasource.password=Abhi
 
 spring.security.user.name=admin
 spring.security.user.password=admin123
